doc/onnx-diagnostic/v0.7.1/_sources/auto_technical/index.rst
:orphan:

Technical Details
=================



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example applies what was illustrated l-plot-parallelized-reduction, reduction operations are sensitive to parallelization.">

.. only:: html

  .. image:: /auto_technical/images/thumb/sphx_glr_plot_layer_norm_discrepancies_thumb.png
    :alt:

  :ref:`sphx_glr_auto_technical_plot_layer_norm_discrepancies.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">LayerNormalization implementation cannot be exchanged</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="A reduction is a frequent operation with neural networks. It appears in layer normalization, softmax... Because of the float precision, the result of the computation changes based on the order of the elements. The following examples show the variation based on different hypothesis on the vector distribution. We consider a vector X = (x_1, ..., x_n). It computes the average:">

.. only:: html

  .. image:: /auto_technical/images/thumb/sphx_glr_plot_parallelized_reduction_thumb.png
    :alt:

  :ref:`sphx_glr_auto_technical_plot_parallelized_reduction.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Reproducible Parallelized Reduction is difficult</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_technical/plot_layer_norm_discrepancies
   /auto_technical/plot_parallelized_reduction


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: auto_technical_python.zip </auto_technical/auto_technical_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: auto_technical_jupyter.zip </auto_technical/auto_technical_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
